[project]
name = "robosuite-runtime"
version = "0.1.0"
description = "Generic Robosuite simulation runtime"
requires-python = ">=3.12,<3.13"

dependencies = [
    "numpy>=1.26,<2",

    "mujoco==3.4.0",
    "robosuite==1.5.2",

    "glfw==2.10.0",
    "PyOpenGL==3.1.10",

    "imageio",
    "imageio-ffmpeg",

    "cloudpickle",

    "PyYAML",
]
