[project]
name = "robosuite-runtime"
version = "0.1.0"
description = "Robosuite simulation runtime for Torch and JAX policies"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==1.26.4",
    "mujoco==3.4.0",
    "robosuite==1.5.2",
    "glfw==2.10.0",
    "PyOpenGL==3.1.10",
    "imageio==2.37.2",
    "imageio-ffmpeg",
    "PyYAML==6.0.3",
    "cloudpickle==3.1.2",

    "torch==2.9.1",
    "jax"
]

[project.scripts]
run-bundle = "robosuite_runtime.cli:main"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
